--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,9 @@ code {
   transform: scale(1.05); 
 }
 
-.breed-icon {
+.star-icon {
   position: absolute;
   top: 10px;
   right: 10px;
-  color: gold; 
-  font-size: 1.5rem; 
-  z-index: 10;
+  color: gold;
 }
